--- a/mb/sass/blocks/footer.scss
+++ b/mb/sass/blocks/footer.scss
@@ -209,6 +209,10 @@
     width: auto;
   }
   
+  .footer__right {
+    padding: 0;
+  }
+  
   .footer__store {
     width: 291px;
     margin: auto;
