--- a/mb/sass/style.scss
+++ b/mb/sass/style.scss
@@ -17,3 +17,6 @@
 @import 'blocks/easy';
 @import 'blocks/type';
 @import 'blocks/footer';
+
+@import 'blocks/breadcrumbs';
+@import 'blocks/legal';
