--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -133,8 +133,31 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 0;
   list-style: none; }
+  .nav__list--inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    width: 650px; }
+    .nav__list--inner a {
+      color: #051c4f;
+      font-size: 17px;
+      font-family: 'ProximaNova', sans-serif;
+      text-decoration: none; }
+
+.nav__login {
+  display: block;
+  width: 45px;
+  height: 40px;
+  border-radius: 5px;
+  background: #051c4f url("../img/nav-login.png") no-repeat center; }
 
 @media screen and (max-width: 768px) {
   .nav__list {
@@ -173,7 +196,7 @@ body {
     .button--blue {
       padding: 10px 40px; }
     .button--unclick {
-      padding: 10px 40px; } }
+      padding: 10px 30px; } }
 
 .title {
   padding: 0 0 95px 0;
@@ -1146,8 +1169,119 @@ body {
   .footer__left,
   .footer__right {
     width: auto; }
+  .footer__right {
+    padding: 0; }
   .footer__store {
     width: 291px;
     margin: auto; }
   .footer__social {
     margin: 20px auto 0; } }
+
+.breadcrumbs {
+  padding: 25px 0;
+  background: #eaeaea; }
+  .breadcrumbs ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    width: 400px;
+    margin: 0;
+    margin-left: auto;
+    padding: 0;
+    color: #716f6f;
+    font-size: 14px;
+    font-family: 'ProximaNova', sans-serif;
+    list-style: none; }
+    .breadcrumbs ul a {
+      color: #949494;
+      text-decoration: none;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
+      .breadcrumbs ul a:hover {
+        color: #716f6f; }
+
+@media screen and (max-width: 768px) {
+  .breadcrumbs {
+    display: none; } }
+
+.legal {
+  padding: 40px 0; }
+  .legal h1 {
+    margin: 0 0 20px 0;
+    color: #051c4f;
+    font-size: 18px;
+    font-family: 'ProximaNovaBold', sans-serif;
+    text-transform: uppercase; }
+
+.legal__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.legal__button ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+  .legal__button ul li button {
+    width: 100%;
+    padding: 10px;
+    color: #949494;
+    font-size: 18px;
+    font-family: 'ProximaNovaLight', sans-serif;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+    outline: none; }
+
+.legal__content {
+  width: 700px;
+  margin: 30px 0 0 0; }
+  .legal__content h2 {
+    margin: 0 0 30px 0;
+    color: #051c4f;
+    font-size: 37px;
+    font-family: 'ProximaNova', sans-serif; }
+  .legal__content p {
+    color: #949494;
+    font-size: 18px;
+    font-family: 'ProximaNovaLight', sans-serif; }
+  .legal__content b {
+    font-size: 18px;
+    font-family: 'ProximaNova', sans-serif; }
+
+.legal__active {
+  color: #051c4f !important;
+  border-top: 1px solid #051c4f !important;
+  border-bottom: 1px solid #051c4f !important;
+  background: url("../img/legal-arrow.png") no-repeat right;
+  background-size: 6px; }
+
+@media screen and (max-width: 768px) {
+  .legal__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .legal__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    background: #eaeaea; }
+    .legal__button h1 {
+      text-transform: none; }
+  .legal__content {
+    width: auto; }
+    .legal__content h2 {
+      margin: 0 0 10px 0;
+      font-size: 20px; }
+    .legal__content p {
+      font-size: 14px; } }
