add mobile menu

--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -159,7 +159,95 @@ body {
   border-radius: 5px;
   background: #051c4f url("../img/nav-login.png") no-repeat center; }
 
+.nav__toggle,
+.nav__login {
+  display: none; }
+
+.nav--closed {
+  -webkit-animation-name: close;
+  animation-name: close;
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+@-webkit-keyframes close {
+  0% {
+    top: 78px; }
+  100% {
+    top: -500px; } }
+
+@keyframes close {
+  0% {
+    top: 78px; }
+  100% {
+    top: -500px; } }
+
+.nav--opened {
+  -webkit-animation-name: open;
+  animation-name: open;
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+@-webkit-keyframes open {
+  0% {
+    top: -500px; }
+  100% {
+    top: 78px; } }
+
+@keyframes open {
+  0% {
+    top: -500px; }
+  100% {
+    top: 78px; } }
+
 @media screen and (max-width: 768px) {
+  .nav__toggle {
+    position: absolute;
+    left: 0;
+    display: block;
+    width: 23px;
+    height: 16px;
+    font-size: 0;
+    border: none;
+    background: url("../img/nav.svg") no-repeat top; }
+  .nav__login {
+    position: absolute;
+    right: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    font-size: 0;
+    border: none;
+    background: url("../img/nav-login.svg") no-repeat top;
+    background-size: cover; }
+  .nav__container {
+    position: absolute;
+    top: -500px;
+    width: 100%;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .nav__container ul {
+      margin: 0;
+      padding: 0 30px;
+      background: #fff;
+      list-style: none; }
+      .nav__container ul li {
+        border-bottom: 1px solid #dddddd; }
+        .nav__container ul li a {
+          display: block;
+          width: 100%;
+          padding: 15px 0;
+          color: #69696a;
+          font-family: 'ProximaNova', sans-serif;
+          text-decoration: none; }
+  .nav__flex {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: relative; }
   .nav__list {
     display: none; } }
 
