--- a/mb/sass/style.scss
+++ b/mb/sass/style.scss
@@ -4,6 +4,7 @@
 @import 'global/fonts';
 
 @import 'blocks/time';
+@import 'blocks/header';
 @import 'blocks/nav';
 @import 'blocks/button';
 @import 'blocks/title';
