--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -9,3 +9,7 @@
 @import 'blocks/welcome';
 @import 'blocks/edge';
 @import 'blocks/account';
+@import 'blocks/tabs';
+@import 'blocks/form';
+// @import 'blocks/payment';
+@import 'blocks/footer';
