--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -6,6 +6,8 @@ body {
 .container {
   width: 1080px;
   margin: auto; }
+  .container--big {
+    width: 1200px; }
 
 @media screen and (max-width: 1200px) {
   .container {
@@ -178,6 +180,7 @@ body {
   display: none; }
 
 .nav--closed {
+  display: none;
   -webkit-animation-name: close;
   animation-name: close;
   -webkit-animation-duration: 0.5s;
@@ -251,7 +254,8 @@ body {
     display: block;
     width: 100%;
     -webkit-transition: 0.3s;
-    transition: 0.3s; }
+    transition: 0.3s;
+    z-index: 20; }
     .nav__container ul {
       margin: 0;
       padding: 0 30px;
@@ -1383,6 +1387,7 @@ body {
     font-size: 18px;
     font-family: 'ProximaNovaLight', sans-serif;
     border: none;
+    background: #fff;
     text-align: left;
     cursor: pointer;
     outline: none; }
@@ -1407,32 +1412,71 @@ body {
   color: #051c4f !important;
   border-top: 1px solid #051c4f !important;
   border-bottom: 1px solid #051c4f !important;
-  background: url("../img/legal-arrow.png") no-repeat right;
-  background-size: 6px; }
+  background: #fff url("../img/legal-arrow.png") no-repeat right !important;
+  background-size: 6px !important; }
+
+.legal__choice {
+  display: none; }
 
 @media screen and (max-width: 768px) {
+  .legal {
+    padding: 0 0 40px 0; }
   .legal__flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
   .legal__button {
+    position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    background: #eaeaea; }
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 25px 0; }
     .legal__button h1 {
+      margin: 0;
       text-transform: none; }
+    .legal__button ul {
+      position: absolute;
+      width: 100%;
+      height: auto;
+      background: #fff;
+      -webkit-transition: top 0.1ms, opacity 0.2s;
+      transition: top 0.1ms, opacity 0.2s; }
+      .legal__button ul li {
+        border-bottom: 1px solid #ddd; }
+  .legal__choice {
+    display: block;
+    width: 140px;
+    height: 30px;
+    padding: 0 10px 0 25px;
+    color: #051c4f;
+    font-size: 12px;
+    font-family: 'ProximaNovaLight', sans-serif;
+    border: 1px solid #051c4f;
+    border-radius: 5px;
+    background: url("../img/legal-menu.png") no-repeat 7px; }
+  .legal__list--closed {
+    top: -300px;
+    opacity: 0; }
+  .legal__list--opened {
+    top: 2px;
+    opacity: 1; }
   .legal__content {
     width: auto; }
     .legal__content h2 {
       margin: 0 0 10px 0;
       font-size: 20px; }
     .legal__content p {
-      font-size: 14px; } }
+      font-size: 14px; }
+  .legal__active {
+    color: #949494 !important;
+    border: none !important;
+    background: #fff !important; } }
 
 .indicators header {
   margin: 20px 0;
@@ -1443,6 +1487,8 @@ body {
     color: #051c4f;
     font-size: 30px;
     font-family: 'ProximaNovaSemiBold', sans-serif; }
+    .indicators header h2:nth-child(2) {
+      display: none; }
 
 .indicators__controll {
   padding: 20px 0;
@@ -1472,16 +1518,39 @@ body {
       border-radius: 5px;
       text-decoration: none; }
 
+.indicators__all {
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .indicators__all:hover {
+    color: #fff;
+    background: #051c4f; }
+
 .indicators__trend {
   padding: 10px 50px 10px 20px !important;
-  background: url("../img/indicators-trend.png") no-repeat 120px; }
+  background: url("../img/indicators-trend.png") no-repeat 120px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .indicators__trend:hover {
+    color: #fff;
+    background: #051c4f url("../img/indicators-trend-h.png") no-repeat 120px; }
 
 .indicators__oscc {
-  background: url("../img/indicators-oscc.png") no-repeat 20px; }
+  padding: 10px 50px 10px 20px !important;
+  background: url("../img/indicators-oscc.png") no-repeat 135px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .indicators__oscc:hover {
+    color: #fff;
+    background: #051c4f url("../img/indicators-oscc-h.png") no-repeat 135px; }
 
-.indicators__active {
-  color: #fff !important;
-  background: #051c4f; }
+.indicators__psyho {
+  padding: 10px 50px 10px 20px !important;
+  background: url("../img/indicators-psyho.png") no-repeat 165px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .indicators__psyho:hover {
+    color: #fff;
+    background: #051c4f url("../img/indicators-psyho-h.png") no-repeat 165px; }
 
 .indicators__flex {
   display: -webkit-box;
@@ -1492,9 +1561,16 @@ body {
   justify-content: space-between; }
   .indicators__flex--second {
     margin: 10px 0 0 0; }
+  .indicators__flex--trend p {
+    background: url("../img/indicators-trend.png") no-repeat right; }
+  .indicators__flex--oscc p {
+    background: url("../img/indicators-oscc.png") no-repeat right; }
+  .indicators__flex--psyho p {
+    background: url("../img/indicators-psyho.png") no-repeat right;
+    background-size: 14px; }
 
 .indicators__box {
-  width: 250px;
+  width: 270px;
   -webkit-box-shadow: 0.8px 0.5px 9px 0.3px rgba(0, 1, 1, 0.2);
   box-shadow: 0.8px 0.5px 9px 0.3px rgba(0, 1, 1, 0.2); }
   .indicators__box img {
@@ -1504,7 +1580,34 @@ body {
   padding: 20px 20px 30px; }
   .indicators__content b {
     color: #051c4f;
+    font-size: 16px;
     font-family: 'ProximaNovaSemiBold', sans-serif; }
+  .indicators__content p {
+    color: #5d5f62;
+    font-size: 14px;
+    font-family: 'ProximaNova', sans-serif; }
+  .indicators__content hr {
+    height: 1px;
+    margin: 10px 0;
+    border: none;
+    background: #dddddd; }
+  .indicators__content a {
+    display: block;
+    width: 150px;
+    margin: 30px auto 0;
+    padding: 10px 0;
+    color: #051c4f;
+    font-size: 14px;
+    font-family: 'ProximaNova', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid #051c4f;
+    border-radius: 5px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .indicators__content a:hover {
+      color: #fff;
+      background: #051c4f; }
 
 .indicators__pagination {
   display: -webkit-box;
@@ -1523,7 +1626,87 @@ body {
     font-size: 14px;
     font-family: 'ProximaNovaLight', sans-serif;
     text-decoration: none;
-    background: #dddddd; }
+    background: #dddddd;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .indicators__pagination a:hover {
+      color: #fefefe;
+      background: #051c4f; }
+
+.indicators__active {
+  color: #fefefe !important;
+  background: #051c4f !important; }
+
+.indicators__menu,
+.indicators__button {
+  display: none; }
+
+@media screen and (max-width: 768px) {
+  .indicators--oscc, .indicators--psyho {
+    display: none; }
+  .indicators header {
+    margin: 2px 0 20px 0; }
+    .indicators header h2 {
+      font-size: 20px; }
+      .indicators header h2:first-child {
+        display: none; }
+      .indicators header h2:nth-child(2) {
+        display: block; }
+  .indicators__filtr {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative; }
+  .indicators__button {
+    display: block;
+    width: 110px;
+    height: 30px;
+    padding: 0 10px 0 25px;
+    font-size: 14px;
+    font-family: 'ProximaNovaLight', sans-serif;
+    border: 1px solid #051c4f;
+    border-radius: 5px;
+    background: transparent url("../img/indicators-menu.png") no-repeat 11px; }
+  .indicators__menu {
+    position: absolute;
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background: #fff;
+    list-style: none;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .indicators__menu li {
+      border-bottom: 1px solid #dddddd; }
+    .indicators__menu a {
+      display: block;
+      padding: 15px 0;
+      color: #959595;
+      font-size: 14px;
+      font-family: 'ProximaNova', sans-serif;
+      text-decoration: none; }
+  .indicators__controll {
+    display: none; }
+  .indicators__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .indicators__box {
+    margin: 0 0 10px 0; }
+  .indicators--closed {
+    top: -500px; }
+  .indicators--opened {
+    top: 64px; } }
 
 .contact h1 {
   margin: 50px 0 0 0;
@@ -1691,3 +1874,155 @@ body {
     margin-left: 0;
     font-size: 16px;
     width: 180px; } }
+
+.f_h {
+  margin: 0;
+  padding: 40px 0 50px 0;
+  color: #051c4f;
+  font-size: 32px;
+  font-family: 'ProximaNovaBold', sans-serif;
+  text-align: center; }
+
+.ft_h {
+  margin: 30px;
+  color: #051c4f;
+  text-align: center;
+  font-size: 40px;
+  font-family: 'ProximaNovaBold', sans-serif; }
+
+main {
+  margin-top: 3px;
+  padding-bottom: 40px;
+  background-color: #f4f4f4; }
+
+.plan_types {
+  width: 1200px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.silver {
+  width: 380px;
+  text-align: center;
+  background-color: white;
+  -webkit-box-shadow: 0.767px 10.973px 9.79px 1.21px rgba(0, 5, 7, 0.25);
+  box-shadow: 0.767px 10.973px 9.79px 1.21px rgba(0, 5, 7, 0.25); }
+
+.gold {
+  width: 380px;
+  text-align: center;
+  background-color: white;
+  -webkit-box-shadow: 0.767px 10.973px 9.79px 1.21px rgba(0, 5, 7, 0.25);
+  box-shadow: 0.767px 10.973px 9.79px 1.21px rgba(0, 5, 7, 0.25); }
+
+.platinum {
+  width: 380px;
+  text-align: center;
+  background-color: white;
+  -webkit-box-shadow: 0.767px 10.973px 9.79px 1.21px rgba(0, 5, 7, 0.25);
+  box-shadow: 0.767px 10.973px 9.79px 1.21px rgba(0, 5, 7, 0.25); }
+
+.silver h1 {
+  font-size: 35px; }
+
+.prices {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  color: #051c4f;
+  background-color: #eeeeee;
+  font-size: 27px;
+  font-family: 'ProximaNovaBold', sans-serif; }
+
+.pros_list {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.pros_list li {
+  font-size: 15px;
+  font-family: 'ProximaNovaLight', sans-serif;
+  border-bottom: 1px dotted #000;
+  border-color: #d8d8d8;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  color: #828282; }
+
+.plans_button_one {
+  width: 217px;
+  font-size: 14px;
+  font-family: 'ProximaNova', sans-serif;
+  background-color: white;
+  border: 1px solid;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+  color: #00154f;
+  padding: 10px 70px;
+  margin-top: 50px;
+  margin-bottom: 30px; }
+
+.plans_button_two {
+  padding: 10px 70px;
+  margin: 50px 0px 30px;
+  color: white;
+  border-width: 1px;
+  border-color: #051c4f;
+  border-style: solid;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  background-color: #051c4f;
+  width: 217px; }
+
+.s_h {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-size: 40px;
+  font-family: 'ProximaNovaBold', sans-serif;
+  font-weight: bold;
+  margin: 0;
+  color: white;
+  background: linear-gradient(10deg, #002e5f 0%, black 100%); }
+
+@media screen and (max-width: 768px) {
+  .plan_types {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: auto; }
+  .gold, .platinum, .silver {
+    width: 300px; }
+  .f_h {
+    padding: 20px 0;
+    font-size: 20px; }
+  .ft_h,
+  .s_h {
+    font-size: 24px; }
+  .pros_list {
+    padding: 0 20px; }
+    .pros_list li {
+      font-size: 13px; }
+  .price {
+    font-size: 20px; }
+  .plans_button_one,
+  .plans_button_two {
+    margin: 20px 0; }
+  .silver,
+  .gold {
+    margin-bottom: 20px; } }
