--- a/mb/sass/blocks/legal.scss
+++ b/mb/sass/blocks/legal.scss
@@ -31,6 +31,7 @@
         font-size: 18px;
         font-family: 'ProximaNovaLight', sans-serif;
         border: none;
+        background: #fff;
         text-align: left;
         cursor: pointer;
         outline: none;
@@ -66,25 +67,75 @@
   color: $mc !important;
   border-top: 1px solid $mc !important;
   border-bottom: 1px solid $mc !important;
-  background: url('../img/legal-arrow.png') no-repeat right;
-  background-size: 6px;
+  background: #fff url('../img/legal-arrow.png') no-repeat right !important;
+  background-size: 6px !important;
+}
+
+.legal__choice {
+  display: none;
 }
 
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
+  .legal {
+    padding: 0 0 40px 0;
+  }
+  
   .legal__flex {
     flex-direction: column;
   }
   
   .legal__button {
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    background: #eaeaea;
+    justify-content: space-around;
+    align-items: center;
+    padding: 25px 0;
+    // background: #eaeaea;
     
     h1 {
+      margin: 0;
       text-transform: none;
     }
+    
+    ul {
+      position: absolute;
+      // top: 2px;
+      width: 100%;
+      height: auto;
+      background: #fff;
+      transition: top 0.1ms, opacity 0.2s;
+      
+      li {
+        border-bottom: 1px solid #ddd;
+      }
+    }
+  }
+  
+  .legal__choice {
+    display: block;
+    width: 140px;
+    height: 30px;
+    padding: 0 10px 0 25px;
+    color: $mc;
+    font-size: 12px;
+    font-family: 'ProximaNovaLight', sans-serif;
+    border: 1px solid $mc;
+    border-radius: 5px;
+    background: url('../img/legal-menu.png') no-repeat 7px;
+  }
+  
+  .legal__list--closed {
+    // display: none;
+    top: -300px;
+    opacity: 0;
+  }
+  
+  .legal__list--opened {
+    // display: block;
+    top: 2px;
+    opacity: 1;
   }
   
   .legal__content {
@@ -98,5 +149,11 @@
     p {
       font-size: 14px;
     }
+  }
+  
+  .legal__active {
+    color: #949494 !important;
+    border: none !important;
+    background: #fff !important;
   }
 }
