--- a/mb/sass/blocks/account.scss
+++ b/mb/sass/blocks/account.scss
@@ -22,8 +22,8 @@ main {
 }
 
 .plan_types {
-  width: 1200px;
-  margin: auto;
+  // width: 1200px;
+  // margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
