--- a/mb/sass/blocks/breadcrumbs.scss
+++ b/mb/sass/blocks/breadcrumbs.scss
@@ -31,6 +31,19 @@
   }
 }
 
+.breadcrumbs__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  h1 {
+    margin: 0;
+    color: $mc;
+    font-size: 32px;
+    font-family: 'ProximaNovaBold', sans-serif;
+  }
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
