--- a/option/css/style.css
+++ b/option/css/style.css
@@ -88,7 +88,7 @@ body {
     box-shadow: 0px 0px 20px 0.3px #00aeff; }
 
 .edge {
-  padding: 90px 0 100px 0;
+  padding: 90px 0 40px 0;
   background: #182340; }
 
 .edge__name {
@@ -138,6 +138,159 @@ body {
     background-size: 70px; }
 
 .contact {
-  margin: -20px 0 0 0;
-  background: #182340 url("../img/contact-bg.png") no-repeat top;
+  padding: 250px 0 60px 0;
+  background: #182340 url("../img/contact-bg-1.png") no-repeat top;
   background-size: cover; }
+
+.contact__wrapper {
+  width: 950px;
+  margin: auto; }
+
+.contact__text {
+  margin: 0;
+  color: #fff;
+  font-size: 30px;
+  font-family: 'Open Sans Light', sans-serif;
+  text-transform: uppercase; }
+  .contact__text span {
+    font-family: 'Open Sans Bold', sans-serif; }
+  .contact__text:nth-child(2) {
+    margin: 30px 0 80px 0; }
+
+.contact__form {
+  padding: 65px 85px;
+  background: rgba(0, 0, 0, 0.4); }
+  .contact__form input {
+    width: 300px;
+    height: 55px;
+    padding: 0 25px;
+    font-size: 20px;
+    font-family: 'Open Sans Light', sans-serif;
+    border: none;
+    border-radius: 5px; }
+    .contact__form input::-webkit-input-placeholder {
+      color: #555555; }
+    .contact__form input:-ms-input-placeholder {
+      color: #555555; }
+    .contact__form input::-ms-input-placeholder {
+      color: #555555; }
+    .contact__form input::placeholder {
+      color: #555555; }
+  .contact__form button {
+    display: block;
+    margin: auto;
+    padding: 15px 110px;
+    color: #fff;
+    font-size: 26px;
+    font-family: 'Open Sans Light', sans-serif;
+    text-transform: uppercase;
+    -webkit-box-shadow: 0px 0px 80px 0px #00aeff;
+    box-shadow: 0px 0px 80px 0px #00aeff;
+    border: none;
+    border-radius: 5px;
+    background: #00aeff;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    cursor: pointer; }
+    .contact__form button:hover {
+      -webkit-box-shadow: 0px 0px 120px 0px #00aeff;
+      box-shadow: 0px 0px 120px 0px #00aeff; }
+
+.contact__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  .contact__flex:nth-child(2) {
+    margin: 30px 0 40px 0; }
+
+.footer__wrapper {
+  background: #181818; }
+  .footer__wrapper--dark {
+    background: #121212; }
+  .footer__wrapper--text {
+    padding: 20px 0 50px 0;
+    color: #676464;
+    font-size: 13px;
+    font-family: 'Open Sans Light', sans-serif; }
+    .footer__wrapper--text span {
+      font-family: 'Open Sans Bold', sans-serif; }
+    .footer__wrapper--text a {
+      color: #a4a0a0;
+      text-decoration: none;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
+      .footer__wrapper--text a:hover {
+        color: #00aeff; }
+  .footer__wrapper hr {
+    width: 1px;
+    border: none;
+    background: #252525; }
+
+.footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  .footer__flex--social {
+    padding: 50px 0; }
+  .footer__flex--link {
+    padding: 40px 0; }
+
+.footer__logo {
+  width: 373px;
+  height: 44px; }
+
+.footer__left {
+  width: 307px;
+  height: 138px;
+  background: url("../img/footer-payment.png") no-repeat left;
+  background-size: 307px; }
+
+.footer__middle b {
+  padding: 0 0 0 25px;
+  color: #fff;
+  font-size: 20px;
+  font-family: 'Open Sans Light', sans-serif;
+  background: url("../img/footer-link.png") no-repeat left; }
+
+.footer__middle ul {
+  padding: 0;
+  list-style: none; }
+  .footer__middle ul li {
+    padding: 5px 0; }
+    .footer__middle ul li a {
+      color: #fff;
+      font-size: 13px;
+      font-family: 'Open Sans Light', sans-serif;
+      text-decoration: none;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
+      .footer__middle ul li a:hover {
+        color: #00aeff; }
+
+.footer__right {
+  padding: 0 155px 0 0;
+  background: url("../img/footer-mockup.png") no-repeat right; }
+  .footer__right b {
+    padding: 0 0 0 30px;
+    color: #fff;
+    font-size: 20px;
+    font-family: 'Open Sans Light', sans-serif;
+    background: url("../img/footer-download.png") no-repeat left; }
+  .footer__right a {
+    display: block;
+    width: 157px;
+    height: 42px;
+    border-radius: 5px; }
+    .footer__right a:nth-child(2) {
+      margin: 20px 0 15px 0;
+      background: #000 url("../img/footer-appstore.png") no-repeat top;
+      background-size: cover; }
+    .footer__right a:nth-child(3) {
+      background: #000 url("../img/footer-googleplay.png") no-repeat top;
+      background-size: cover; }
