--- a/option/css/style.css
+++ b/option/css/style.css
@@ -87,6 +87,31 @@ body {
     -webkit-box-shadow: 0px 0px 20px 0.3px #00aeff;
     box-shadow: 0px 0px 20px 0.3px #00aeff; }
 
+@media screen and (max-width: 768px) {
+  .title {
+    padding: 30px 0 70px 0; }
+  .title__wrapper {
+    padding: 0; }
+  .title__logo {
+    display: block;
+    width: 200px;
+    height: auto;
+    margin: auto; }
+  .title__name {
+    margin: 50px 0;
+    font-size: 30px;
+    text-align: center; }
+  .title__text {
+    font-size: 25px;
+    text-align: center; }
+  .title__begin {
+    display: block;
+    width: 250px;
+    margin: 0 auto;
+    padding: 15px 0;
+    font-size: 16px;
+    text-align: center; } }
+
 .edge {
   padding: 90px 0 40px 0;
   background: #182340; }
@@ -136,6 +161,26 @@ body {
   .edge__box--5 {
     background: url("../img/edge-5.png") no-repeat top;
     background-size: 70px; }
+
+@media screen and (max-width: 768px) {
+  .edge {
+    padding: 30px 0 0 0; }
+  .edge__name {
+    margin: 0 0 50px 0;
+    font-size: 30px; }
+  .edge__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .edge__flex--second {
+      margin: 0; }
+  .edge__box {
+    margin: 0 0 20px 0;
+    font-size: 16px; } }
 
 .contact {
   padding: 250px 0 60px 0;
@@ -205,6 +250,38 @@ body {
   justify-content: space-between; }
   .contact__flex:nth-child(2) {
     margin: 30px 0 40px 0; }
+
+@media screen and (max-width: 1200px) {
+  .contact__wrapper {
+    width: auto; }
+  .contact__form {
+    padding: 35px; }
+    .contact__form input {
+      width: 250px; } }
+
+@media screen and (max-width: 768px) {
+  .contact {
+    padding: 150px 0 60px 0; }
+  .contact__text {
+    font-size: 25px;
+    text-align: center; }
+    .contact__text:nth-child(2) {
+      margin: 30px 0 50px 0; }
+  .contact__form input {
+    width: auto;
+    margin: 0 0 10px 0;
+    font-size: 16px; }
+  .contact__form button {
+    width: 100%;
+    padding: 15px 0;
+    font-size: 16px; }
+  .contact__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+    .contact__flex:nth-child(2) {
+      margin: 0 0 20px 0; } }
 
 .footer__wrapper {
   background: #181818; }
@@ -294,3 +371,27 @@ body {
     .footer__right a:nth-child(3) {
       background: #000 url("../img/footer-googleplay.png") no-repeat top;
       background-size: cover; }
+
+@media screen and (max-width: 1200px) {
+  .footer__left {
+    width: 200px;
+    background-size: 200px; } }
+
+@media screen and (max-width: 768px) {
+  .footer__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .footer__logo {
+    width: 300px;
+    height: auto; }
+  .footer__middle {
+    text-align: center; }
+  .footer__right {
+    padding: 0;
+    text-align: center;
+    background: none; } }
