--- a/option/sass/blocks/edge.scss
+++ b/option/sass/blocks/edge.scss
@@ -60,3 +60,30 @@
     background-size: 70px;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    padding: 30px 0 0 0;
+  }
+  
+  .edge__name {
+    margin: 0 0 50px 0;
+    font-size: 30px;
+  }
+  
+  .edge__flex {
+    flex-direction: column;
+    align-items: center;
+    
+    &--second {
+      margin: 0;
+    }
+  }
+  
+  .edge__box {
+    margin: 0 0 20px 0;
+    font-size: 16px;
+  }
+}
