--- a/option/sass/blocks/footer.scss
+++ b/option/sass/blocks/footer.scss
@@ -125,3 +125,32 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {
+  .footer__left {
+    width: 200px;
+    background-size: 200px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .footer__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .footer__logo {
+    width: 300px;
+    height: auto;
+  }
+  
+  .footer__middle {
+    text-align: center;
+  }
+  
+  .footer__right {
+    padding: 0;
+    text-align: center;
+    background: none;
+  }
+}
