--- a/option/css/style.css
+++ b/option/css/style.css
@@ -55,7 +55,7 @@ body {
   height: 49px; }
 
 .title__name {
-  margin: 100px 0;
+  margin: 80px 0 50px 0;
   color: #fff;
   font-size: 60px;
   font-weight: 300;
@@ -65,7 +65,7 @@ body {
     font-family: 'Open Sans Bold', sans-serif; }
 
 .title__text {
-  margin: 0 0 100px 0;
+  margin: 0 0 80px 0;
   color: #fff;
   font-size: 34px;
   font-family: 'Open Sans Light', sans-serif; }
