--- a/option/sass/blocks/title.scss
+++ b/option/sass/blocks/title.scss
@@ -14,7 +14,7 @@
 }
 
 .title__name {
-  margin: 100px 0;
+  margin: 80px 0 50px 0;
   color: #fff;
   font-size: 60px;
   font-weight: 300;
@@ -27,7 +27,7 @@
 }
 
 .title__text {
-  margin: 0 0 100px 0;
+  margin: 0 0 80px 0;
   color: #fff;
   font-size: 34px;
   font-family: 'Open Sans Light', sans-serif;
